<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8EFF7"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_marginTop="30dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/guest"
            android:contentDescription="@string/profile_picture"/>


        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtfName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:backgroundTint="#F9CD6A"/>
        <Button
            android:id="@+id/btn_pass_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:backgroundTint="#F9CD6A"/>
        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:backgroundTint="#FF0000"/>


    </LinearLayout>
</ScrollView>