<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8EFF7"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_your_password"
            android:textSize="32sp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:textSize="20sp"
            android:text="@string/enter_your_current_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currPass"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/enter_the_new_password"
            />
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPass"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/re_enter_your_new_password"
            />
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPass"/>
        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:backgroundTint="#F9CD6A"/>




    </LinearLayout>
</ScrollView>
