<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/car_maintenance_bg">

    <TextView
        android:id="@+id/loginTitle"
        style="@style/LoginPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/car"
        app:layout_constraintBottom_toTopOf="@+id/txtInLayoutUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayoutUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/avatar"
            android:drawableTint="@color/black"
            android:hint="@string/Username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_marginTop="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayoutPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInLayoutUsername"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/lock"
            android:drawableTint="@color/black"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_login"
        android:text="@string/Login"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintEnd_toEndOf="@+id/signUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/txtInLayoutPassword" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="219dp"
        android:background="@drawable/btn_signup"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#F9CD6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/forgetPassword"
        style="@style/ButtonWithShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        android:background="@drawable/forget_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
