<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG">

    <LinearLayout
        android:id="@+id/LinearRP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LinearInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/registrationPage"
            style="@style/LoginPageTitle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/RegistrationPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearRP">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                android:drawableStart="@drawable/avatar"
                android:drawableTint="@color/black"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayoutRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:drawableStart="@drawable/lock"
                android:drawableTint="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MobileNumber"
                android:drawableStart="@drawable/phone"
                android:drawableTint="@color/black"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FirstName"
                android:drawableStart="@drawable/card"
                android:drawableTint="@color/black"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastName"
                android:drawableStart="@drawable/card"
                android:drawableTint="@color/black"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_confirmemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmEmailAddress"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/Register"
            android:theme="@style/ButtonSignUp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
